[package]
name = "ambi_mock_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
reqwest = { version = "0.11.9", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.74"
clap = { version = "3.1.7", features = ["derive"] }

[dev-dependencies]
regex = "1.5.4"

[lib]
name = "ambi_mock_client"
path = "src/lib.rs"
