[package]
name = "ambi_mock_client"
authors = ["Rust Never Sleeps community (https://github.com/Jim-Hodapp-Coaching/)"]
description = "Provides a mock Ambi client that emulates real sensor hardware such as an Edge client."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
reqwest = { version = "0.11.14", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.74"
clap = { version = "4.1.4", features = ["derive"] }

[dev-dependencies]
regex = "1.7.1"

[lib]
name = "ambi_mock_client"
path = "src/lib.rs"
